syntax = "proto3";

package ai.metathings.service.identityd2;

import "validate/validate.proto";

import "model.proto";

message PatchActionRequest {
	OpAction action = 1 [(validate.rules).message.required = true];
}

message PatchActionResponse {
	Action action = 1;
}
